# rust-algo

./: README.md
ch1-1/: Cargo.toml
ch1-1/src/: main.rs
ch1-6/: Cargo.toml
ch1-6/src/: main.rs
p21/: Cargo.toml
p21/src/: main.rs
p23/: Cargo.toml
p23/src/: main.rs
p25/: Cargo.toml
p25/src/: main.rs
p27/: Cargo.toml
p27/src/: main.rs
p30/: Cargo.toml
p30/benches/: p30_benchmark.rs
p30/src/: fact.rs  fib.rs  lib.rs  main.rs
p31/: Cargo.toml
p31/src/: main.rs
p32/: Cargo.toml
p32/src/: main.rs
p8/: Cargo.toml
