[package]
name = "p30"
version = "0.1.0"
authors = ["Yuki Nagae <yuki.nagae1130@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "p30_benchmark"
harness = false

[dependencies]
